[project]
name = "license-manager-simulator"
version = "4.6.0"
description = "The License Manager Simulator is an application that simulates output from 5 license servers for use in the development of applications which interface to the license servers."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "OmniVector Solutions", email = "info@omnivector.solutions" }
]
requires-python = ">=3.12"
repository = "https://github.com/omnivector-solutions/license-manager"
documentation = "https://omnivector-solutions.github.io/license-manager"

dependencies = [
    "requests>=2.26.0",
    "Jinja2>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
]

[project.scripts]
lmutil = "lm_simulator.fake_binaries.flexlm.lmutil:main"
lmxendutil = "lm_simulator.fake_binaries.lmx.lmxendutil:main"
lstc_qrun = "lm_simulator.fake_binaries.lsdyna.lstc_qrun:main"
olixtool = "lm_simulator.fake_binaries.olicense.olixtool:main"
rlmutil = "lm_simulator.fake_binaries.rlm.rlmutil:main"
DSLicSrv = "lm_simulator.fake_binaries.dsls.DSLicSrv:main"

[tool.ruff]
extend = "../ruff.toml"

[tool.hatch.build.targets.wheel]
packages = ["lm_simulator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
