[tool.poetry]
name = "lm-test"
version = "0.1.0"
description = "License Manager automated integration test"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnivector-solutions/license-manager"
packages = [{include = "lm_test"}]

[tool.poetry.dependencies]
python = "^3.12"
license-manager-cli = {path = "../lm-cli"}
py-buzz = "^7.3.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"

[tool.ruff]
extend = "../ruff.toml"

[tool.poetry.scripts]
test-lm = "lm_test.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
